# PyLy

./: .gitignore  .plexignore  README.md  __main__.py  pyly.bat  pyly.sh  pyproject.toml
pyly/: __init__.py  __main__.py  base_lyrics.py  cli.py  console_ui.py  lrc_writer.py  lyrics_fetch.py  pipeline.py  reduce_text.py  srt_io.py  template_tokens.py  timecode.py  whisper_offline.py
