[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyly"
version = "0.1.0"
description = "Offline-first Python lyrics pipeline: Whisper SRT → reduced SRT → PlexAmp-compatible LRC"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = []

[project.scripts]
pyly = "pyly.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyly*"]
